--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,14 +1,3 @@
-@include('layouts.navbar')
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <style>
 *{
     margin: 0;padding: 0;
     box-sizing: border-box;
@@ -38,8 +27,7 @@ section {
     display: flex;
     align-items: center;
     min-height: 100vh;
-    background-color: white
-    /* background:url(https://img.freepik.com/free-photo/light-gray-concrete-wall_53876-89532.jpg) no-repeat; */
+    background:url(https://images.pexels.com/photos/3965545/pexels-photo-3965545.jpeg?cs=srgb&dl=pexels-ksenia-chernaya-3965545.jpg&fm=jpg) no-repeat;
     background-size: cover;
     background-position: center;
 }
@@ -92,21 +80,3 @@ section {
 
 }
 }
-
-    </style>
-</head>
-<body>
-
-    <section class="home" id="home">
-
-        <div class="content">
-            <h3>INTRIC</h3>
-            <span>Best Fashioned Cloth</span>
-            <p>Intric is a detachable clothing company created in late 2022 and based in Indonesia. it focuses on making simple but intricately designed functional clothing in the form of a shirt with detachable parts. Intric aims to create clothing that is flexible towards the customer's taste by allowing customisation to the detachable areas. The concept has been around for quite some time, but Intric is the first one to do it here in Indonesia. Quite cool right?</p>
-            <a href="#" class="btn">Shop Now</a>
-        </div>
-
-    </section>
-
-</body>
-</html>
