--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,12 +8,25 @@
     transition: .2s linear;
 }
 
+.heading{
+    text-align: center;
+    font-size: 4rem;
+    color: #333;
+    padding: 1rem;
+    margin: 2rem;
+    background: rgba(255, 51, 153, .05);
+}
+
+.heading span{
+    color: #FFFDD0;
+}
+
 :root{
     --pink:#e84393
 }
 
 html{
-    font-size: 62.5%;
+    font-size: 90.5%;
     scroll-behavior: smooth;
     scroll-padding-top: 6rem;
     overflow-x: hidden;
@@ -27,7 +40,8 @@ section {
     display: flex;
     align-items: center;
     min-height: 100vh;
-    background:url(https://images.pexels.com/photos/3965545/pexels-photo-3965545.jpeg?cs=srgb&dl=pexels-ksenia-chernaya-3965545.jpg&fm=jpg) no-repeat;
+    background-color: white;
+    /* background:url(https://img.freepik.com/free-photo/light-gray-concrete-wall_53876-89532.jpg) no-repeat; */
     background-size: cover;
     background-position: center;
 }
@@ -67,16 +81,70 @@ section {
     background:var(--antiquewhite)
 }
 
+
+
 @media(max-width: 991px){
     html{
-    font-size: 55%;
+    font-size: 85%;
 
 }
 }
 
 @media(max-width: 450px){
     html{
-    font-size: 40%;
+    font-size: 60%;
 
+    .heading{
+        font-size: 3rem;
+    }
 }
+}
+
+.about .row{
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    flex-wrap: wrap;
+    padding: 2rem 0;
+    padding-bottom: 3rem;
+}
+
+.about .row .video-container{
+    flex: 1 1 40rem;
+    position: relative;
+}
+
+.about .row .video-container video{
+    width: 100%;
+    border: 1.5rem solid #fff;
+    border-radius: .5rem;
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 1);
+}
+
+.about .row .video-container h3{
+    position: absolute;
+    top: 50%; transform:  translateY(-50);
+    font-size: 3rem;
+    color: #fff;
+    width: 100%;
+    padding: 1rem 2rem;
+    text-align: center;
+    mix-blend-mode: screen;
+}
+
+
+.about .row .content{
+    flex: 1 1 40rem;
+}
+
+.about .row .content h3{
+    font-size: 3rem;
+    color: #333;
+}
+.about .row .content p{
+    font-size: 1.5rem;
+    color: #999;
+    padding: 5rem 0;
+    padding-top: 1rem;
+    line-height: 1rem;
 }
