--- a/public/resources/css/style.css
+++ b/public/resources/css/style.css
@@ -1,14 +1,16 @@
-*{
-    margin: 0;padding: 0;
+* {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    outline: none; border: none;
+    outline: none;
+    border: none;
     text-decoration: none;
     text-transform: capitalize;
     transition: .2s linear;
 }
 
-.heading{
+.heading {
     text-align: center;
     font-size: 4rem;
     color: #333;
@@ -17,15 +19,15 @@
     background: rgba(255, 51, 153, .05);
 }
 
-.heading span{
+.heading span {
     color: #FFFDD0;
 }
 
-:root{
-    --pink:#e84393
+:root {
+    --pink: #e84393
 }
 
-html{
+html {
     font-size: 90.5%;
     scroll-behavior: smooth;
     scroll-padding-top: 6rem;
@@ -36,7 +38,7 @@ section {
     padding: 2rem 9%;
 }
 
-.home{
+.home {
     display: flex;
     align-items: center;
     min-height: 100vh;
@@ -46,25 +48,25 @@ section {
     background-position: center;
 }
 
-.home .content{
+.home .content {
     max-width: 50rem;
 }
 
-.home .content h3{
+.home .content h3 {
     font-size: 6rem;
     color: antiquewhite;
 }
 
-.home .content span{
+.home .content span {
     font-size: 3.5rem;
-    color:var(--antiquewhite);
+    color: var(--antiquewhite);
     padding: 1rem 0;
     line-height: 1.5
 }
 
-.home .content p{
+.home .content p {
     font-size: 1.5rem;
-    color:var(--antiquewhite);
+    color: var(--antiquewhite);
 }
 
 .btn {
@@ -73,34 +75,35 @@ section {
     border-radius: 5rem;
     background: #333;
     color: #fff;
-    padding:.9rem 3.5rem;
+    padding: .9rem 3.5rem;
     cursor: pointer;
     font-size: 1.7rem;
 }
+
 .btn:hover {
-    background:var(--antiquewhite)
+    background: var(--antiquewhite)
 }
 
 
 
-@media(max-width: 991px){
-    html{
-    font-size: 85%;
+@media(max-width: 991px) {
+    html {
+        font-size: 85%;
 
-}
-}
-
-@media(max-width: 450px){
-    html{
-    font-size: 60%;
-
-    .heading{
-        font-size: 3rem;
     }
 }
+
+@media(max-width: 450px) {
+    html {
+        font-size: 60%;
+
+        .heading {
+            font-size: 3rem;
+        }
+    }
 }
 
-.about .row{
+.about .row {
     display: flex;
     align-items: center;
     gap: 2rem;
@@ -109,21 +112,22 @@ section {
     padding-bottom: 3rem;
 }
 
-.about .row .video-container{
+.about .row .video-container {
     flex: 1 1 40rem;
     position: relative;
 }
 
-.about .row .video-container video{
+.about .row .video-container video {
     width: 100%;
     border: 1.5rem solid #fff;
     border-radius: .5rem;
     box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 1);
 }
 
-.about .row .video-container h3{
+.about .row .video-container h3 {
     position: absolute;
-    top: 50%; transform:  translateY(-50);
+    top: 50%;
+    transform: translateY(-50);
     font-size: 3rem;
     color: #fff;
     width: 100%;
@@ -133,15 +137,16 @@ section {
 }
 
 
-.about .row .content{
+.about .row .content {
     flex: 1 1 40rem;
 }
 
-.about .row .content h3{
+.about .row .content h3 {
     font-size: 3rem;
     color: #333;
 }
-.about .row .content p{
+
+.about .row .content p {
     font-size: 1.5rem;
     color: #999;
     padding: 5rem 0;
@@ -149,63 +154,15 @@ section {
     line-height: 1rem;
 }
 
-/* Footer */
-
-footer .box-container{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1.5rem;
-
-}
-
-footer .box-container .box{
-   flex: 1 1 25rem;
-
-}
-
-footer .box-container .box h3{
-    color: #333;
-    font-size: 2.5rem;
-    padding: 1rem 0;
- }
-
- footer .box-container .box a{
-    display: block;
-    color: #666;
-    font-size: 1.5rem;
-    padding: 1rem 0;
- }
- footer .box-container .box a:hover{
-    color: #fff;
-    text-decoration: underline;
- }
- footer .box-container .box a:hover img{
-    margin-top: 1rem;
- }
-
- footer .credit{
-    text-align: center;
-    padding: 1.5rem;
-    margin-top: 1.5 rem;
-    padding-top: 2.5rem;
-    font-size: 2rem;
-    color: #333;
-    border-top: .1rem solid rgba(0, 0, 0, 1);
- }
-
- footer .credit span{
-    color:var(--antiquewhite)
- }
-
 /* products */
 
-.product .box-container{
+.product .box-container {
     display: flex;
     flex-wrap: wrap;
     gap: 1.5rem;
 }
 
-.product .box-container .box{
+.product .box-container .box {
     flex: 1 1 30rem;
     box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 1);
     border-radius: 5rem;
@@ -213,9 +170,3 @@ footer .box-container .box h3{
     position: relative;
 
 }
-
-
-
-
-
-
