--- a/public/resources/css/about.css
+++ b/public/resources/css/about.css
@@ -16,11 +16,11 @@
     color: #333;
     padding: 1rem;
     margin: 2rem;
-    background: rgba(255, 51, 153, .05);
+    background: #D3D3D3;
 }
 
 .heading span {
-    color: #FFFDD0;
+    color: #ffffff;
 }
 
 :root {
@@ -127,15 +127,22 @@ section {
 .about .row .video-container h3 {
     position: absolute;
     top: 50%;
-    transform: translateY(-50);
+    transform: translateY(-50%);
     font-size: 3rem;
-    color: #fff;
+    color: #333;
+    background: #fff;
     width: 100%;
     padding: 1rem 2rem;
     text-align: center;
     mix-blend-mode: screen;
 }
 
+.about .row .video-container img {
+    width: 100%;
+    border: 1.5rem solid #fff;
+    border-radius: .5rem;
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 1);
+}
 
 .about .row .content {
     flex: 1 1 40rem;
@@ -149,24 +156,5 @@ section {
 .about .row .content p {
     font-size: 1.5rem;
     color: #999;
-    padding: 5rem 0;
-    padding-top: 1rem;
-    line-height: 1rem;
-}
-
-/* products */
-
-.product .box-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1.5rem;
-}
-
-.product .box-container .box {
-    flex: 1 1 30rem;
-    box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 1);
-    border-radius: 5rem;
-    border: .1rem solid rgba(0, 0, 0, 1);
-    position: relative;
 
 }
