--- a/public/resources/css/footer.css
+++ b/public/resources/css/footer.css
@@ -11,15 +11,14 @@
 }
 
 .footer .box-container .box h3 {
-    color: #333;
-    font-size: 2.5rem;
+    color: #7c7c7c;
+    font-size: 1.5rem;
     padding: 1rem 0;
 }
 
 .footer .box-container .box a {
     display: block;
-    color: #666;
-    font-size: 1.5rem;
+    color: #a7a6a6;
     padding: 1rem 0;
 }
 
@@ -34,11 +33,10 @@
 
 .footer .credit {
     text-align: center;
-    padding: 1.5rem;
+    padding-bottom: 1rem;
     margin-top: 1.5 rem;
     padding-top: 2.5rem;
-    font-size: 2rem;
-    color: #333;
+    color: #7a7a7a;
     border-top: .1rem solid rgba(0, 0, 0, 1);
 }
 
