--- a/public/resources/css/footer.css
+++ b/public/resources/css/footer.css
@@ -1,37 +1,37 @@
-.footer .box-container {
+.box-container {
     display: flex;
     flex-wrap: wrap;
     gap: 1.5rem;
 
 }
 
-.footer .box-container .box {
+.box-container .box {
     flex: 1 1 15rem;
 
 }
 
-.footer .box-container .box h3 {
+.box-container .box h3 {
     color: #7c7c7c;
     font-size: 1.5rem;
-    padding: 1rem 0;
+    padding: 0.5rem 0;
 }
 
-.footer .box-container .box a {
+.box-container .box a {
     display: block;
     color: #a7a6a6;
-    padding: 1rem 0;
+    padding: 0.7rem 0;
 }
 
-.footer .box-container .box a:hover {
+.box-container .box a:hover {
     color: #fff;
     text-decoration: underline;
 }
 
-.footer .box-container .box a:hover img {
+.box-container .box a:hover img {
     margin-top: 1rem;
 }
 
-.footer .credit {
+.credit {
     text-align: center;
     padding-bottom: 1rem;
     margin-top: 1.5 rem;
@@ -40,6 +40,6 @@
     border-top: .1rem solid rgba(0, 0, 0, 1);
 }
 
-.footer .credit span {
+.credit span {
     color: var(--antiquewhite)
 }
