--- a/public/resources/css/home.css
+++ b/public/resources/css/home.css
@@ -30,7 +30,7 @@ section {
     align-items: center;
     min-height: 100vh;
     background-color: white;
-    /* background:url(https://img.freepik.com/free-photo/light-gray-concrete-wall_53876-89532.jpg) no-repeat; */
+    background:url(https://wallpaperset.com/w/full/b/c/8/395710.jpg) no-repeat;
     background-size: cover;
     background-position: center;
 }
