--- a/public/resources/css/product.css
+++ b/public/resources/css/product.css
@@ -203,3 +203,17 @@ section {
     font-weight: lighter;
     text-decoration: line-through;
 }
+/* .slideshow-container {
+    position: relative;
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+.mySlides {
+    display: none;
+}
+
+img {
+    width: 100%;
+    height: auto;
+} */
