--- a/public/resources/css/home.css
+++ b/public/resources/css/home.css
@@ -30,9 +30,10 @@ section {
     align-items: center;
     min-height: 100vh;
     background-color: white;
-    background:url(https://wallpaperset.com/w/full/b/c/8/395710.jpg) no-repeat;
+    background: url("https://wallpaperset.com/w/full/b/c/8/395710.jpg") no-repeat;
     background-size: cover;
     background-position: center;
+    animation: backgroundSlideshow 10s linear infinite;
 }
 
 .home .content {
@@ -82,5 +83,20 @@ section {
     html {
         font-size: 60%;
 
+    }
+}
+
+@keyframes backgroundSlideshow {
+    0% {
+        background-image: url("https://wallpaperset.com/w/full/b/c/8/395710.jpg");
+    }
+    35% {
+        background-image: url("https://img.freepik.com/free-photo/gray-surface-with-white-cloth_114579-30381.jpg?size=626&ext=jpg&ga=GA1.1.153618704.1699328592&semt=ais");
+    }
+    75% {
+        background-image: url("https://img.freepik.com/free-photo/smooth-red-textile-brown-fabric-background_23-2147921511.jpg?size=626&ext=jpg&ga=GA1.1.153618704.1699328592&semt=ais");
+    }
+    100% {
+        background-image: url("https://wallpaperset.com/w/full/b/c/8/395710.jpg");
     }
 }
