--- a/public/resources/css/product.css
+++ b/public/resources/css/product.css
@@ -203,7 +203,7 @@ section {
     font-weight: lighter;
     text-decoration: line-through;
 }
-/* .slideshow-container {
+.slideshow-container {
     position: relative;
     max-width: 1000px;
     margin: 0 auto;
@@ -216,4 +216,4 @@ section {
 img {
     width: 100%;
     height: auto;
-} */
+}
