--- a/public/resources/css/footer.css
+++ b/public/resources/css/footer.css
@@ -1,13 +1,14 @@
 .box-container {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     gap: 1.5rem;
     padding-bottom: 1.5rem;
 }
 
 .box-container .box {
     flex: 1 1 15rem;
-
+    text-align: center;
 }
 
 .box-container .box h3 {
