--- a/public/resources/css/product.css
+++ b/public/resources/css/product.css
@@ -1,3 +1,4 @@
+
 * {
     margin: 0;
     padding: 0;
@@ -16,15 +17,15 @@
     color: #333;
     padding: 1rem;
     margin: 2rem;
-    background: rgba(141, 166, 187, 0.05);
+    background: #D3D3D3;
 }
 
 .heading span {
-    color: gray;
+    color: #ffffff;
 }
 
 :root {
-    color:gray;
+    --pink: #e84393
 }
 
 html {
@@ -82,7 +83,7 @@ section {
 }
 
 .btn:hover {
-    background: var(--antiquewhite)
+    background: grey;
 }
 
 
@@ -104,116 +105,63 @@ section {
     }
 }
 
-
-.product .box-container {
+.about .row {
     display: flex;
+    align-items: center;
+    gap: 2rem;
     flex-wrap: wrap;
-    gap: 1.5rem;
-    /* align-content: center; */
+    padding: 2rem 0;
+    padding-bottom: 3rem;
 }
 
-.product .box-container .box {
-    flex: 1 1 20rem;
-    box-shadow: 0 .5rem 1.5rem rgba(0, 0, 0, .1);
-    border-radius: .5rem;
-    max-width: 27.5rem;
-    border: .1rem solid rgba(0, 0, 0, .1);
+.about .row .video-container {
+    flex: 1 1 40rem;
     position: relative;
-    align-content: center;
-
 }
 
-.product .box-container .box .discount {
-    position: absolute;
-    top: 1rem;
-    left: 1rem;
-    padding: .7rem 1rem;
-    font-size: 2rem;
-    color: var(--antiquewhite);
-    background: rgba(141, 166, 187, 0.05);
-    z-index: 1;
-    border-radius: .5rem;
-}
-
-.product .box-container .box .image {
-    position: relative;
-    text-align: center;
-    padding-top: 2rem;
-    overflow: hidden;
-    /* max-width: 100%; */
-
-}
-
-.product .box-container .box .image img {
-    height: 25rem;
+.about .row .video-container video {
     width: 100%;
+    border: 1.5rem solid #fff;
+    border-radius: .5rem;
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 1);
 }
 
-.product .box-container .box:hover .image img {
-    transform: scale(1.1);
-}
-
-.product .box-container .box .image .icons {
+.about .row .video-container h3 {
     position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    display: flex;
-}
-
-.product .box-container .box .image .icons a {
-    height: 5rem;
-    line-height: 5rem;
-    font-size: 2rem;
-    width: 50%;
-    background: var(--white);
-    color: #fff;
-}
-
-.product .box-container .box .image .icons .cart-btn {
-    border-left: 1rem solid #fff7;
-    border-right: 1rem solid #fff7;
-    width: 100%
-}
-
-.product .box-container .box .image .icons a:hover {
-    background: #333;
-}
-
-.product .box-container .box .content {
-    padding: 2rem;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 3rem;
+    color: #333;
+    background: #fff;
+    width: 100%;
+    padding: 1rem 2rem;
     text-align: center;
+    mix-blend-mode: screen;
 }
 
-.product .box-container .box .content h3 {
-    font-size: 2.5rem;
+.about .row .video-container img {
+    width: 100%;
+    border: 1.5rem solid #fff;
+    border-radius: .5rem;
+    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 1);
+}
+
+.about .row .content {
+    flex: 1 1 40rem;
+}
+
+.about .row .content h3 {
+    font-size: 3rem;
     color: #333;
 }
 
-.product .box-container .box .content .price {
-    font-size: 2.5rem;
-    color: #333;
-    font-weight: bolder;
-    padding-top: 1rem;
-}
-
-.product .box-container .box .content .price span {
+.about .row .content p {
     font-size: 1.5rem;
-    color: #999999;
-    font-weight: lighter;
-    text-decoration: line-through;
-}
-.slideshow-container {
-    position: relative;
-    max-width: 1000px;
-    margin: 0 auto;
+    color: #999;
+
 }
 
-.mySlides {
-    display: none;
+.content a:hover {
+    color: black;
 }
 
-img {
-    width: 100%;
-    height: auto;
-}
