--- a/public/resources/css/about.css
+++ b/public/resources/css/about.css
@@ -168,11 +168,10 @@ section {
 .team .box-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 1.5rem;
-    /* align-content: center; */
+    gap: 1rem; /* Adjust the gap value */
 }
 
-.team .box-container .box {
+.team .box {
     flex: 1 1 20rem;
     box-shadow: 0 .5rem 1.5rem rgba(0, 0, 0, .1);
     border-radius: .5rem;
@@ -183,7 +182,7 @@ section {
 
 }
 
-.team .box-container .box .classification {
+.team .box .classification {
     position: absolute;
     top: 1rem;
     left: 1rem;
@@ -195,7 +194,7 @@ section {
     border-radius: .5rem;
 }
 
-.team .box-container .box .image {
+.team .box .image {
     position: relative;
     text-align: center;
     padding-top: 2rem;
@@ -203,7 +202,7 @@ section {
     /* max-width: 100%; */
 }
 
-.team .box-container .box .image img {
+.team .box .image img {
     height: 35rem;
     width: 100%;
     overflow: hidden;
@@ -211,11 +210,11 @@ section {
     object-position: center center;
 }
 
-.team .box-container .box:hover .image img {
+.team .box:hover .image img {
     transform: scale(1.1);
 }
 
-.team .box-container .box .image .icons {
+.team .box .image .icons {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -223,7 +222,7 @@ section {
     display: flex;
 }
 
-.team .box-container .box .image .icons a {
+.team .box .image .icons a {
     height: 5rem;
     line-height: 5rem;
     font-size: 2rem;
@@ -232,29 +231,29 @@ section {
     color: #fff;
 }
 
-.team .box-container .box .image .icons .cart-btn {
+.team .box .image .icons .cart-btn {
     border-left: 1rem solid #fff7;
     border-right: 1rem solid #fff7;
     width: 100%
 }
 
-.team .box-container .box .image .icons a:hover {
+.team .box .image .icons a:hover {
     background: #333;
 }
 
-.team .box-container .box .content {
+.team .box .content {
     padding: 2rem;
     text-align: center;
 }
 
-.team .box-container .box .content h3 {
+.team .box .content h3 {
     font-size: 1.5rem;
     color: #333;
     font-weight: lighter;
 }
 
 
-.team .box-container .box .content .price span {
+.team .box .content .price span {
     font-size: 1.5rem;
     color: #999999;
     font-weight: lighter;
