--- a/public/resources/css/home.css
+++ b/public/resources/css/home.css
@@ -30,7 +30,8 @@ section {
     align-items: center;
     min-height: 100vh;
     background-color: white;
-    background: url("https://wallpaperset.com/w/full/b/c/8/395710.jpg") no-repeat;
+    /* Ubah path atau URL sesuai dengan lokasi gambar */
+    background: url("/resources/image/homeintric.png") no-repeat;
     background-size: cover;
     background-position: center;
     animation: backgroundSlideshow 14s linear infinite;
@@ -89,7 +90,7 @@ section {
 
 @keyframes backgroundSlideshow {
     0% {
-        background-image: url("https://wallpaperset.com/w/full/b/c/8/395710.jpg");
+        background-image: url("/resources/images/homeintric2.png");
     }
     40% {
         background-image: url("https://img.freepik.com/free-photo/gray-surface-with-white-cloth_114579-30381.jpg?size=626&ext=jpg&ga=GA1.1.153618704.1699328592&semt=ais");
@@ -98,6 +99,6 @@ section {
         background-image: url("https://img.freepik.com/free-photo/smooth-red-textile-brown-fabric-background_23-2147921511.jpg?size=626&ext=jpg&ga=GA1.1.153618704.1699328592&semt=ais");
     }
     100% {
-        background-image: url("https://wallpaperset.com/w/full/b/c/8/395710.jpg");
+        background-image: url("/resources/images/homeintric2.png");
     }
 }
